--- a/theme/index.html
+++ b/theme/index.html
@@ -769,7 +769,7 @@
                         <div class="col-lg-4">
                             <div class="card">
                                 <div class="card-title">
-                                    <h4>Notice Board </h4>
+                                    <h4>Notice  </h4>
 
                                 </div>
                                 <div class="recent-comment m-t-15">
