--- a/theme/app-profile.html
+++ b/theme/app-profile.html
@@ -33,253 +33,20 @@
   <div class="sidebar sidebar-hide-to-small sidebar-shrink sidebar-gestures">
     <div class="nano">
       <div class="nano-content">
-        <div class="logo">
-          <a href="index.html">
-            <!-- <img src="images/logo.png" alt="" /> -->
-            <span>Focus</span>
-          </a>
+        <div class="nano-content">
+          <div class="logo"><a href="index.html"><img src="images/logo cropped.png" alt="" /></a></div>
+          <ul>
+            <li class="label">Main</li>
+            <li><a href="index.html"><i class="ti-home"></i> Dashboard </a></li>
+            <li class="label">Apps</li>
+            <li><a href="chart-flot.html"><i class="ti-bar-chart-alt"></i> Charts </a></li>
+            <li><a href="app-email.html"><i class="ti-email"></i> Email</a></li>
+            <li><a href="app-profile.html"><i class="ti-user"></i> Profile</a></li>
+            <li><a href="table-row-select.html"><i class="ti-layout-grid4-alt"></i> Table </a></li>
+            <li><a href="form-basic.html"><i class="ti-view-list-alt"></i> Basic Form </a></li>
+            <li><a href="page-login.html"><i class="ti-close"></i> Logout</a></li>
+          </ul>
         </div>
-        <ul>
-          <li class="label">Main</li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-home"></i> Dashboard
-              <span class="badge badge-primary">2</span>
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="index.html">Dashboard 1</a>
-              </li>
-              <li>
-                <a href="index.html">Dashboard 2</a>
-              </li>
-
-
-
-            </ul>
-          </li>
-
-          <li class="label">Apps</li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-bar-chart-alt"></i> Charts
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="chart-flot.html">Flot</a>
-              </li>
-              <li>
-                <a href="chart-morris.html">Morris</a>
-              </li>
-              <li>
-                <a href="chartjs.html">Chartjs</a>
-              </li>
-              <li>
-                <a href="chartist.html">Chartist</a>
-              </li>
-              <li>
-                <a href="chart-peity.html">Peity</a>
-              </li>
-              <li>
-                <a href="chart-sparkline.html">Sparkle</a>
-              </li>
-              <li>
-                <a href="chart-knob.html">Knob</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="app-event-calender.html">
-              <i class="ti-calendar"></i> Calender </a>
-          </li>
-          <li>
-            <a href="app-email.html">
-              <i class="ti-email"></i> Email</a>
-          </li>
-          <li>
-            <a href="app-profile.html">
-              <i class="ti-user"></i> Profile</a>
-          </li>
-          <li>
-            <a href="app-widget-card.html">
-              <i class="ti-layout-grid2-alt"></i> Widget</a>
-          </li>
-          <li class="label">Features</li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-layout"></i> UI Elements
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="ui-typography.html">Typography</a>
-              </li>
-              <li>
-                <a href="ui-alerts.html">Alerts</a>
-              </li>
-
-              <li>
-                <a href="ui-button.html">Button</a>
-              </li>
-              <li>
-                <a href="ui-dropdown.html">Dropdown</a>
-              </li>
-
-              <li>
-                <a href="ui-list-group.html">List Group</a>
-              </li>
-
-              <li>
-                <a href="ui-progressbar.html">Progressbar</a>
-              </li>
-              <li>
-                <a href="ui-tab.html">Tab</a>
-              </li>
-
-            </ul>
-          </li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-panel"></i> Components
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="uc-calendar.html">Calendar</a>
-              </li>
-              <li>
-                <a href="uc-carousel.html">Carousel</a>
-              </li>
-              <li>
-                <a href="uc-weather.html">Weather</a>
-              </li>
-              <li>
-                <a href="uc-datamap.html">Datamap</a>
-              </li>
-              <li>
-                <a href="uc-todo-list.html">To do</a>
-              </li>
-              <li>
-                <a href="uc-scrollable.html">Scrollable</a>
-              </li>
-              <li>
-                <a href="uc-sweetalert.html">Sweet Alert</a>
-              </li>
-              <li>
-                <a href="uc-toastr.html">Toastr</a>
-              </li>
-              <li>
-                <a href="uc-range-slider-basic.html">Basic Range Slider</a>
-              </li>
-              <li>
-                <a href="uc-range-slider-advance.html">Advance Range Slider</a>
-              </li>
-              <li>
-                <a href="uc-nestable.html">Nestable</a>
-              </li>
-
-              <li>
-                <a href="uc-rating-bar-rating.html">Bar Rating</a>
-              </li>
-              <li>
-                <a href="uc-rating-jRate.html">jRate</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-layout-grid4-alt"></i> Table
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="table-basic.html">Basic</a>
-              </li>
-
-              <li>
-                <a href="table-export.html">Datatable Export</a>
-              </li>
-              <li>
-                <a href="table-row-select.html">Datatable Row Select</a>
-              </li>
-              <li>
-                <a href="table-jsgrid.html">Editable </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-heart"></i> Icons
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="font-themify.html">Themify</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-map"></i> Maps
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="gmaps.html">Basic</a>
-              </li>
-              <li>
-                <a href="vector-map.html">Vector Map</a>
-              </li>
-            </ul>
-          </li>
-          <li class="label">Form</li>
-          <li>
-            <a href="form-basic.html">
-              <i class="ti-view-list-alt"></i> Basic Form </a>
-          </li>
-          <li class="label">Extra</li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-files"></i> Invoice
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="invoice.html">Basic</a>
-              </li>
-              <li>
-                <a href="invoice-editable.html">Editable</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a class="sidebar-sub-toggle">
-              <i class="ti-target"></i> Pages
-              <span class="sidebar-collapse-icon ti-angle-down"></span>
-            </a>
-            <ul>
-              <li>
-                <a href="page-login.html">Login</a>
-              </li>
-              <li>
-                <a href="page-register.html">Register</a>
-              </li>
-              <li>
-                <a href="page-reset-password.html">Forgot password</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="../documentation/index.html">
-              <i class="ti-file"></i> Documentation</a>
-          </li>
-          <li>
-            <a>
-              <i class="ti-close"></i> Logout</a>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
@@ -415,55 +182,6 @@
                 </div>
               </div>
             </div>
-            <div class="dropdown dib">
-              <div class="header-icon" data-toggle="dropdown">
-                <span class="user-avatar">John
-                  <i class="ti-angle-down f-s-10"></i>
-                </span>
-                <div class="drop-down dropdown-profile dropdown-menu dropdown-menu-right">
-                  <div class="dropdown-content-heading">
-                    <span class="text-left">Upgrade Now</span>
-                    <p class="trial-day">30 Days Trail</p>
-                  </div>
-                  <div class="dropdown-content-body">
-                    <ul>
-                      <li>
-                        <a href="#">
-                          <i class="ti-user"></i>
-                          <span>Profile</span>
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="#">
-                          <i class="ti-email"></i>
-                          <span>Inbox</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="ti-settings"></i>
-                          <span>Setting</span>
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="#">
-                          <i class="ti-lock"></i>
-                          <span>Lock Screen</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <i class="ti-power-off"></i>
-                          <span>Logout</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -479,9 +197,7 @@
           <div class="col-lg-8 p-r-0 title-margin-right">
             <div class="page-header">
               <div class="page-title">
-                <h1>Hello,
-                  <span>Welcome Here</span>
-                </h1>
+                <h1>Hello, <span>Mr. Ruiz</span></h1>
               </div>
             </div>
           </div>
@@ -510,19 +226,17 @@
                     <div class="row">
                       <div class="col-lg-4">
                         <div class="user-photo m-b-30">
-                          <img class="img-fluid" src="images/user-profile.jpg" alt="" />
+                          <img class="img-fluid" src="images/id.png" alt="" />
                         </div>
                         <div class="user-work">
-                          <h4>work</h4>
+                          <h4>School</h4>
                           <div class="work-content">
-                            <h3>It Solution </h3>
-                            <p>123, South Mugda</p>
-                            <p>New York, 1214</p>
+                            <h3>STI College Santa Rosa </h3>
+                            <p>Ruby Street, Santa Rosa Commercial Complex, Barangay Balibago, City of Santa Rosa </p>
                           </div>
                           <div class="work-content">
-                            <h3>Unix</h3>
-                            <p>123, South Mugda</p>
-                            <p>New York, 1214</p>
+                            <h3> Santa Rosa Science And Technology High School</h3>
+                            <p>8486+JGF, JP Rizal St, Santa Rosa, Laguna</p>
                           </div>
                         </div>
                         <div class="user-skill">
@@ -547,14 +261,14 @@
                         </div>
                       </div>
                       <div class="col-lg-8">
-                        <div class="user-profile-name">john doe</div>
+                        <div class="user-profile-name">Edmark D. Ruiz</div>
                         <div class="user-Location">
-                          <i class="ti-location-pin"></i> New York, New York</div>
-                        <div class="user-job-title">Product Designer</div>
+                          <i class="ti-location-pin"></i> Laguna, Philippines</div>
+                        <div class="user-job-title">Administrator</div>
                         <div class="ratings">
                           <h4>Ratings</h4>
                           <div class="rating-star">
-                            <span>8.9</span>
+                            <span>4.0/5.0</span>
                             <i class="ti-star color-primary"></i>
                             <i class="ti-star color-primary"></i>
                             <i class="ti-star color-primary"></i>
@@ -578,30 +292,30 @@
                                 <h4>Contact information</h4>
                                 <div class="phone-content">
                                   <span class="contact-title">Phone:</span>
-                                  <span class="phone-number">+8801629599859</span>
+                                  <span class="phone-number">+639690119002</span>
                                 </div>
                                 <div class="address-content">
                                   <span class="contact-title">Address:</span>
-                                  <span class="mail-address">123, Rajar Goli, South Mugda</span>
+                                  <span class="mail-address">84F8+83M, Block 10 Lot 30, Earth Street, Satellite Ville, Market Area, Santa Rosa, Laguna</span>
                                 </div>
                                 <div class="email-content">
                                   <span class="contact-title">Email:</span>
-                                  <span class="contact-email">hello@Admin Board.com</span>
+                                  <span class="contact-email">markruized@yahoo.com</span>
                                 </div>
                                 <div class="website-content">
                                   <span class="contact-title">Website:</span>
-                                  <span class="contact-website">www.Admin Board.com</span>
+                                  <span class="contact-website">https://www.youtube.com/@edmarkruiz</span>
                                 </div>
                                 <div class="skype-content">
-                                  <span class="contact-title">Skype:</span>
-                                  <span class="contact-skype">Admin Board</span>
+                                  <span class="contact-title">Facebook:</span>
+                                  <span class="contact-skype">https://www.facebook.com/dwn.dmrkdzrz</span>
                                 </div>
                               </div>
                               <div class="basic-information">
                                 <h4>Basic information</h4>
                                 <div class="birthday-content">
                                   <span class="contact-title">Birthday:</span>
-                                  <span class="birth-date">January 31, 1990 </span>
+                                  <span class="birth-date">December 19, 2002 </span>
                                 </div>
                                 <div class="gender-content">
                                   <span class="contact-title">Gender:</span>
