--- a/theme/page-login.html
+++ b/theme/page-login.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-6">
                     <div class="login-content">
                         <div class="login-logo">
-                            <a href="index.html"><span>Focus</span></a>
+                            <a href="index.html"><span>EdTech</span></a>
                         </div>
                         <div class="login-form">
                             <h4>Administratior Login</h4>
